--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "homepage": "https://codermandy.github.io/free-handwashing-fcc",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "deploy": "gh-pages -d free-handwashing-fcc "
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
