--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "deploy": "gh-pages -d free-handwashing-fcc "
+    "deploy": "gh-pages -d New\nfolder "
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
